examples/errors/programs/error_4.bas
100 print "This is a test" 
200 let a = "test variable"
300 print a
400 print b 
500 end
